2013-01-08  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Avoid potential heap corruption in action scheduler.

	* src/guiexec.cpp (pkgActionItem::Clear): Factor out; relocate to...
	* src/pkgexec.cpp (pkgActionItem::Clear): ...here; this keeps all use
	of new and delete operators on the same side of the EXE/DLL boundary
	as the constructor and destructor for pkgActionItem objects.
	(pkgActionItem::Schedule): Ensure that all min_wanted and max_wanted
	references are unique to each allocated pkgActionItem object, so that
	the destructor may safely release their associated heap memory blocks.

2013-01-07  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update copyright notification for development in new year.

	* configure.ac (YEARS_OF_ISSUE): Add year 2013.

	* Makefile.in (version.c, guidata.$OBJEXT): Make them depend on...
	(Makefile): ...this, so YEARS_OF_ISSUE propagates to built objects.

2012-12-24  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Work around a GUI action scheduling instability.

	* src/guimain.h (AppWindowMaker::UpdateDataSheet): Declare new method.
	* src/pkgdata.cpp (AppWindowMaker::UpdateDataSheet): Implement it.
	(AppWindowMaker::OnNotify): Use it.

	* src/guiexec.cpp (AppWindowMaker::OnCommand) [IDD_REPO_APPLY]:
	Don't refresh package list view in-place; clear and reload it instead.

2012-12-21  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update distribution build rules.

	* Makefile.in (SRCDIST_FILES): Remove version.c.in; this was moved
	to src/version.c.in, and is now automatically included via...
	(SRCDIST_SUBDIRS): ...this; remove build-aux and build-aux/m4; we want
	only selected files from these, as filtered by specification in...
	(BUILD_AUX_DIRS, BUILD_AUX_FILES): ...these new macros; define them.
	(BLDTAG, SCMTAG, GCMTAG): New release class macros; define them.
	(bindist, licdist, srcdist): Use them.

2012-12-21  Keith Marshall  <keithmarshall@users.sourceforge.net>
